# zeek-redis

./: .ccls  .gitignore  CMakeLists.txt  COPYING  LICENSE  README.md  configure.plugin
cmake/: FindLibHIREDIS.cmake  FindLibREDISPLUSPLUS.cmake
scripts/: __load__.zeek  init.zeek  types.zeek
src/: Plugin.cc  Plugin.h  RedisWriter.cc  RedisWriter.h  redis.bif
